@@ -382,3 +382,6 @@
 - Fixed improper old username being displayed reported by IpAddress
 - Added M_NOLAG.
 - Added new CRC32-hex-based IPv4 and hostname cloaking form
+- Make users that send a forbidden file get auto blocked from sending other
+  files. sptr->flags & FLAGS_DCCBLOCKED.
+
